# modules/fundamental/src/ai/endpoints/test.rs
@@ -1,13 +1,15 @@
-use crate::ai::model::ChatState;
+use crate::ai::model::{ChatMessage, ChatState, Conversation, ConversationSummary};
 use crate::ai::service::test::{ingest_fixtures, sanitize_uuid_field, sanitize_uuid_urn};
 use crate::ai::service::AiService;
 use crate::test::caller;
 use actix_http::StatusCode;
 use actix_web::dev::ServiceResponse;
-use actix_web::test::TestRequest;
+use actix_web::test::{read_body_json, TestRequest};
 use serde_json::json;
 use test_context::test_context;
 use test_log::test;
+use trustify_common::model::PaginatedResults;
+use trustify_test_context::auth::TestAuthentication;
 use trustify_test_context::call::CallService;
 use trustify_test_context::TrustifyContext;
 
@@ -22,8 +24,8 @@ async fn configure(ctx: &TrustifyContext) -> anyhow::Result<()> {
     ingest_fixtures(ctx).await?;
 
     let app = caller(ctx).await?;
-    let mut req = ChatState::new();
-    req.add_human_message("Give me information about the SBOMs available for quarkus reporting its name, SHA and URL.".into());
+    let mut req = ChatState::default();
+    req.messages.push(ChatMessage::human("Give me information about the SBOMs available for quarkus reporting its name, SHA and URL.".into()));
 
     let request = TestRequest::post()
         .uri("/api/v1/ai/completions")
@@ -153,6 +155,141 @@ async fn tools_call(ctx: &TrustifyContext) -> anyhow::Result<()> {
 "#
             .trim()
     );
+
+    Ok(())
+}
+
+#[test_context(TrustifyContext)]
+#[test(actix_web::test)]
+async fn conversation_crud(ctx: &TrustifyContext) -> anyhow::Result<()> {
+    if !AiService::new(ctx.db.clone()).completions_enabled() {
+        return Ok(()); // skip test
+    }
+
+    ctx.ingest_document("quarkus/v1/quarkus-bom-2.13.8.Final-redhat-00004.json")
+        .await?;
+
+    let app = caller(ctx).await?;
+
+    // Verify that there are no conversations
+    let request = TestRequest::get()
+        .uri("/api/v1/ai/conversations")
+        .to_request()
+        .test_auth("user-a");
+
+    let response = app.call_service(request).await;
+    assert_eq!(response.status(), StatusCode::OK);
+
+    let result: PaginatedResults<ConversationSummary> = read_body_json(response).await;
+    assert_eq!(result.total, 0);
+    assert_eq!(result.items.len(), 0);
+
+    // Create a conversation
+    let request = TestRequest::post()
+        .uri("/api/v1/ai/conversations")
+        .set_json(json!(
+            {"messages":[
+                {
+                    "message_type": "human",
+                    "content": "Give me information about the SBOMs available for quarkus reporting its name, SHA and URL."
+                }
+            ]}
+        ))
+        .to_request()
+        .test_auth("user-a");
+
+    let response = app.call_service(request).await;
+    assert_eq!(response.status(), StatusCode::OK);
+
+    let conversation_v1: Conversation = read_body_json(response).await;
+    assert_eq!(conversation_v1.seq, 0);
+    assert!(
+        conversation_v1.messages.len() > 1,
+        "assistant should add more messages"
+    );
+
+    // Verify that the conversation can be listed
+    let request = TestRequest::get()
+        .uri("/api/v1/ai/conversations")
+        .to_request()
+        .test_auth("user-a");
+
+    let response = app.call_service(request).await;
+    assert_eq!(response.status(), StatusCode::OK);
+
+    let result: PaginatedResults<ConversationSummary> = read_body_json(response).await;
+    assert_eq!(result.total, 1);
+    assert_eq!(result.items.len(), 1);
+    assert_eq!(result.items[0].id, conversation_v1.id);
+
+    // Verify that we can retrieve the conversation by ID
+    let request = TestRequest::get()
+        .uri(format!("/api/v1/ai/conversations/{}", conversation_v1.id).as_str())
+        .to_request()
+        .test_auth("user-a");
+
+    let response = app.call_service(request).await;
+    assert_eq!(response.status(), StatusCode::OK);
+
+    let result: Conversation = read_body_json(response).await;
+    assert_eq!(result, conversation_v1);
+
+    // Verify that we can update the conversation
+    let mut update1 = conversation_v1.clone();
+    update1.seq = 1;
+    update1.messages.push(ChatMessage::human(
+        "Are there any related CVEs affecting it?".into(),
+    ));
+
+    let request = TestRequest::put()
+        .uri(format!("/api/v1/ai/conversations/{}", conversation_v1.id).as_str())
+        .set_json(update1.clone())
+        .to_request()
+        .test_auth("user-a");
+
+    let response = app.call_service(request).await;
+    assert_eq!(response.status(), StatusCode::OK);
+
+    let conversation_v2: Conversation = read_body_json(response).await;
+    assert_eq!(conversation_v2.seq, 1);
+    assert!(
+        conversation_v2.messages.len() > update1.messages.len(),
+        "assistant should add more messages"
+    );
+
+    // Verify that we can retrieve the updated conversation by ID
+    let request = TestRequest::get()
+        .uri(format!("/api/v1/ai/conversations/{}", conversation_v1.id).as_str())
+        .to_request()
+        .test_auth("user-a");
+
+    let response = app.call_service(request).await;
+    assert_eq!(response.status(), StatusCode::OK);
+
+    let result: Conversation = read_body_json(response).await;
+    assert_eq!(result, conversation_v2);
+
+    // Verify that we can delete the conversation
+    let request = TestRequest::delete()
+        .uri(format!("/api/v1/ai/conversations/{}", conversation_v1.id).as_str())
+        .to_request()
+        .test_auth("user-a");
+
+    let response = app.call_service(request).await;
+    assert_eq!(response.status(), StatusCode::OK);
+
+    // Verify that the conversation is deleted
+    let request = TestRequest::get()
+        .uri("/api/v1/ai/conversations")
+        .to_request()
+        .test_auth("user-a");
+
+    let response = app.call_service(request).await;
+    assert_eq!(response.status(), StatusCode::OK);
+
+    let result: PaginatedResults<ConversationSummary> = read_body_json(response).await;
+    assert_eq!(result.total, 0);
+    assert_eq!(result.items.len(), 0);
 
     Ok(())
 }
